# QuarkDSE

./: .gitignore  CMakeLists.txt  README  integration.hpp  main.cpp  main_cpu.cpp  plot_dressing.gpl  plot_int_convergence.gpl  tests.cpp
opencl/: compile.sh  cpufuncts.hpp  gpufuncts.hpp  kernel.cl  main.cpp  main2.cpp  main_mac.cpp
opencl_dp/: compile.sh  compile_mac.sh  cpufuncts.hpp  gpufuncts.hpp  kernel.cl  main.cpp
